# B-TodoCLI

./: Cargo.toml  tarpaulin-report.html
src/: ai.rs  cli.rs  config.rs  lib.rs  main.rs  model.rs  storage.rs
src/cli/: cd.rs  change.rs  del.rs  hint.rs  item.rs  new.rs  run.rs
src/model/: item.rs  list.rs
