[package]
name = "B-TodoCLI"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
derive_builder = "0.20.2"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8.23"
sled = "0.34.7"
thiserror = "2.0.18"
directories = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rustyline = "18.0.0"
shellwords = "1.1.0"
reqwest = { version = "0.13.4", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tempfile = "3.27.0"
